--- a/HexaView/pom.xml
+++ b/HexaView/pom.xml
@@ -12,7 +12,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
-      <scope>test</scope>
+      
     </dependency>
     
     <dependency>
@@ -38,5 +38,12 @@
   </dependencies>
   <build>
     <finalName>HexaView</finalName>
+    <plugins>
+    	<plugin>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    		<version>3.8.1</version>
+    	</plugin>
+    </plugins>
   </build>
 </project>
